# blogAPI

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: .env.template  main.py
app/alembic/: env.py
app/alembic/versions/: 2024_09_10_1613-1587d63b2115_create_article_table.py  2024_09_10_1726-b65919a0ff75_create_comments_table.py  2024_09_10_1735-f01783929a8a_add_check_constraint_to_comments_score.py  2024_09_13_0112-a3c98efde516_import_article_id_field_to_article_table.py  2024_09_13_0116-01c3219cca00_add_func_and_trig_for_last_updated_at.py
app/api/: __init__.py
app/api/crud/: __init__.py  article.py  comment.py
app/api/models/: __init__.py  article.py  base.py  comment.py
app/api/routes/: administration.py  article.py  comment.py
app/api/schemes/: __init__.py  article.py  comment.py
app/core/: __init__.py  config.py  db_helper.py  redis_helper.py
app/core/models/: article.py  base.py
app/core/utils/: redis_utils.py
app/import_data/: README.md  articles.json  comments.json
