[project]
name = "BlogAPI"
version = "0.1.0"
description = "BlogAPI pet-project"
authors = [
    { name="Ivan Filippov", email="jam089@mail.ru" }
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.2"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "articles_app",
]
env_files = [
    ".env.test",
]
asyncio_mode = "auto"