[project]
name = "BlogAPI"
version = "0.1.0"
description = "BlogAPI pet-project"
authors = [
    { name="Ivan Filippov", email="jam089@mail.ru" }
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = {extras = ["email"], version = "^2.9.1"}
pydantic-settings = "^2.4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.34"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.2"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "app",
]
env_files = [
    ".env.test",
]
asyncio_mode = "auto"